--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "description": "Brown CSCI0320 Sprint 3 Gearup for Fall 2023",
   "license": "UNLICENSED",
   "dependencies": {
+    "@clerk/clerk-react": "^5.13.1",
     "chart.js": "^4.4.4",
     "react": "^18.1.0",
     "react-chartjs-2": "^5.2.0",
