--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.0",
+    "@clerk/testing": "^1.3.16",
+    "@playwright/test": "^1.48.2",
     "@types/node": "^20.11.5",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
